# blindspot

./: .env.example  .gitignore  README.md  codex.md  project.yml  pyproject.toml  timeline.md
.github/workflows/: deploy-iphone-demo.yml  pages.yml
BlindSpot/App/: BlindSpotApp.swift
BlindSpot/Components/: HazardBadge.swift  StatTile.swift
BlindSpot/Features/Map/: MapScreen.swift
BlindSpot/Features/Onboarding/: OnboardingView.swift  OnboardingViewModel.swift
BlindSpot/Features/Profile/: ProfileView.swift
BlindSpot/Features/Record/: RecordRideView.swift  RecordRideViewModel.swift  RideController.swift
BlindSpot/Features/Rides/: RideListView.swift  RideRecapView.swift  RidesViewModel.swift
BlindSpot/Models/: Enums.swift  Profile.swift  Ride.swift
BlindSpot/Navigation/: RootTabView.swift  RootView.swift
BlindSpot/Services/: AppEnvironment.swift  HazardRepository.swift  RideRepository.swift
BlindSpot/Services/Location/: LiveLocationService.swift  LocationService.swift  MockLocationService.swift
BlindSpot/Utilities/: Formatters.swift
app/: flake.nix
app/app/: globals.css  layout.tsx
app/components/: app-sidebar.tsx  blindspot-mark.tsx  lane-map.tsx  live-map-view.tsx  page-header.tsx  stats-charts.tsx  top-bar.tsx
app/lib/: data.ts
device/blindspot_device/: app.py  ble_bridge.py  config.py  led_strip.py  store.py
device/scripts/: photo_button.py  run_device.py  simulate_event.py
docs/: index.html
docs/iphone-demo/: app.js  config.example.js  index.html  styles.css
iphone-demo/: styles.css
tests/: test_ble_bridge.py  test_button.py
(+17 files in other folders)
