[project]
name = "blindspot"
version = "0.1.0"
description = "Blind Spot Raspberry Pi capture and hazard detection prototype"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pi = ["pyserial>=3.5", "gpiozero>=2.0", "adafruit-circuitpython-neopixel>=6.3.15"]
ml = ["ultralytics>=8.3.0"]
dev = ["ruff>=0.11.0"]

[tool.ruff]
line-length = 100
target-version = "py310"
